   (https://systemausfall.org/toolforge/gpgpy-ezmlm/)
 * support for multi-domain setups (multiple list directories)
 * detect preferred interface language
 * user-specific interface language selection
 * support for listing of subscription log
 * a prefix for the local part of mailing list addresses is now configurable
 * user-specific interface selection (easy/default/expert)
 * support for more ezmlm-idx: 'headerkeep', 'mimekeep' and 'copylines'
 * script for creating binary suid wrappers added
 * handling of empty settings for ezmlm-idx 5.0 fixed (closes #21)
 * bug in MySQL support fixed
 * handling of the special character "dot" in listname and list address fixed
 * the formerly required module "Encode" is now optional

Version 3.1.4 - 03/26/02006
 * new setting: DOTQMAIL_DIR (useful for multi domain vpopmail setups)
   [suggested by Maurits Lamers]
 * minor stylesheet change (circumvents IE rendering bug)
 * case-insensitive check for mime type during address file upload

Version 3.1.3 - 02/22/02006
 * fixed removal of dotqmail files

Version 3.1.2 - 02/15/02006
 * honour DEFAULT_OPTIONS for new lists
 * fixed portability issue of the suid-wrapper

Version 3.1.1 - 01/19/02006
 * more careful removal of dotmail files
 * allow dots in webuser names
 * allow underscores in descriptive listname

Version 3.1 - 01/14/02006
 * fully compatible with ezmlm-idx v5.0
 * change language of list (idx >= 5.0)
 * change charset of list (idx >= 5.0)
 * 'modsub' and 'remote' can be changed independently
 * improved configuration parsing
 * requires Mail::Ezmlm v0.07

Version 3.0.2 - 01/11/02006
 * fixed two confusing description strings

Version 3.0.1 - 01/06/02006
 * allow several special characters in local part of mail address (RFC2822)

Version 3.0 - 12/25/02005
 * complete interface rewritten for enhanced usability
 * suppurt for msgsize, mimereject, trailer
 * fixed insecure writing of webusers data
 * define a default MAIL_DOMAIN