@@ -64,6 +64,7 @@ template/config_options/admin_edit_text.cs -text
 template/config_options/admin_enabled.cs -text
 template/config_options/admin_get_subscribers.cs -text
 template/config_options/admin_path.cs -text
+template/config_options/archive_access.cs -text
 template/config_options/archive_deny_unknown.cs -text
 template/config_options/archive_enabled.cs -text
 template/config_options/archive_mod_only.cs -text
@@ -74,6 +75,7 @@ template/config_options/block_others_archive.cs -text
 template/config_options/block_others_post.cs -text
 template/config_options/charset_select.cs -text
 template/config_options/confirm_post.cs -text
+template/config_options/confirm_selection.cs -text
 template/config_options/confirm_sub.cs -text
 template/config_options/confirm_unsub.cs -text
 template/config_options/copylines.cs -text
@@ -103,8 +105,11 @@ template/config_options/msgsize_max.cs -text
 template/config_options/msgsize_min.cs -text
 template/config_options/mysql.cs -text
 template/config_options/owner_address.cs -text
+template/config_options/posting_selection.cs -text
 template/config_options/prefix.cs -text
 template/config_options/public.cs -text
+template/config_options/reply_to_self.cs -text
+template/config_options/subscribe_selection.cs -text
 template/config_options/trailer.cs -text
 template/config_options/warn_remove.cs -text
 template/config_options/webusers.cs -text
