@@ -1,0 +1,3 @@
+<!-- REMOVE --><?cs include:TemplateDir + '/macros.cs' ?>
+<!-- configure archive access -->
+<?cs call:selection_list("archive") ?>
